阳明-从 Docker 到 Kubernetes 进阶/01code/39traefik 的安装使用/traefik-http/traefik.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  labels:
    app: traefik

spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik
          image: traefik:v2.6
          imagePullPolicy: IfNotPresent
          args:
            # 下面这个参数和whoamI这个服务有关
            - --entrypoints.web.address=:80
            #- --providers.kubernetesingress   # 这个默认值是true,一定要有这个参数,否则不能发现k8s服务
            - --providers.kubernetesingress=true
            # 如果缺少下面的参数不能访问到 dashboard, 但是不影响访问服务
            - --api.insecure=true
          ports:
            - name: web
              containerPort: 80
            - name: dashboard
              containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: traefik
spec:
  # 一般在机房或者云上使用ECS(Elastic Compute Service)自建Kubernetes集群是无法使用 LoadBalancer 类型的 Service.
  # 因为 Kubernetes 本身没有为裸机群集提供网络负载均衡器的实现. MetalLB是一个负载均衡器,专门解决自建 k8s 集群中无法使用 LoadBalancer 类型服务的痛点
  #type: LoadBalancer
  type: NodePort
  selector:
    app: traefik
  ports:
    # 这个端口和配置whoami访问路径的ingress有关
    - protocol: TCP
      port: 80
      name: web
      targetPort: 80
    # 这个端口应用在traefik的dashboard上
    - protocol: TCP
      name: dashboard
      port: 8080
